# aoc

./: .gitignore  Cargo.toml  build.rs  readme.md
src/: app.rs  main.rs  solution.rs
src/codegen/: Cargo.toml
src/codegen/src/: lib.rs
src/solutions/: day1.rs  day10.rs  day10_part2.rs  day11.rs  day11_part2.rs  day12.rs  day12_part2.rs  day13.rs  day13_part2.rs  day14.rs  day14_part2.rs  day15.rs  day15_part2.rs  day16.rs  day16_part2.rs  day17.rs  day17_part2.rs  day18.rs  day18_part2.rs  day19.rs  day19_part2.rs  day1_part2.rs  day2.rs  day20.rs  day20_part2.rs  day21.rs  day21_part2.rs  day2_part2.rs  day3.rs  day3_part2.rs  day4.rs  day4_part2.rs  day5.rs  day5_part2.rs  day6.rs  day6_part2.rs  day7.rs  day7_part2.rs  day8.rs  day8_part2.rs  (+3 more)
