[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "src/codegen" }
clap = "3.0.0-beta.5"
colored = "2"
futures = "0.3"
lazy_static = "1.4.0"
lerp = "0.4.0"
itertools = "0.10.3"
reqwest = "0.11.7"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
regex = "1.5.4"