[package]
name = "aoc"
authors = ["Kaylynn Morgan <mkaylynn7@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "src/codegen" }
clap = { version = "3.0.0-rc.7", features = ["derive", "env"] }
colored = "2"
counter = "0.5.2"
futures = "0.3"
lazy_static = "1.4.0"
lerp = "0.4.0"
logos = "0.12.0"
itertools = "0.10.3"
reqwest = "0.11.7"
rustc-hash = "1.1.0"
tokio = { version = "1", features = ["full"] }
typed-arena = "2.0.1"

[build-dependencies]
regex = "1.5.4"